# anchor-multisig-demo

./: .gitignore  .prettierignore  Anchor.toml  README.md  package.json
js/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
js/src/: address.ts  index.ts  multisig_demo.ts  multisig_member.ts
programs/multisig-demo/: Cargo.toml
programs/multisig-demo/src/: error.rs  lib.rs  state.rs
programs/multisig-demo/src/instructions/: administration.rs  approval.rs  mod.rs  new_multisig.rs  new_transaction.rs
separate_workspace/: Cargo.toml  README.md
separate_workspace/clap-v3-utils/: Cargo.toml  README.md
separate_workspace/clap-v3-utils/src/: keypair.rs
separate_workspace/cli/: Cargo.toml  README.md
separate_workspace/cli/src/: config.rs  main.rs
separate_workspace/cli/src/interface/: mod.rs
separate_workspace/examples/: demo.sh
separate_workspace/sdk/: Cargo.toml
separate_workspace/sdk/src/: instructions.rs  lib.rs  pda.rs
tests/: multisig-demo.ts
tests/accounts/: index.ts
