[package]
name = "multisig-demo"
version = "0.1.0"
description = "Created with Anchor"
author = "Eric Brightfield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
solana-program = "1.10.29"
vipers = "^2.0"
