[package]
name = "solana-clap-v3-utils"
version = "1.11.0"
description = "Solana utilities for the clap v3"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-clap-utils"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.1.5", features = ["cargo"] }
rpassword = "6.0"
# These version numbers needed to be changed.
# This entire crate can be deleted from the repo in favor of the official crate,
# as soon as Anchor upgrades to using Solana 1.11+.
solana-perf = "1.10.29"
solana-remote-wallet = "1.10.29"
solana-sdk = "1.10.29"
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"
uriparse = "0.6.4"
url = "2.2.2"

[dev-dependencies]
tempfile = "3.3.0"

[lib]
name = "solana_clap_v3_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
