[package]
name = "multisig-demo-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multisig-demo = { path = "../../programs/multisig-demo", features = ["no-entrypoint"] }
anyhow = "1.0.66"
anchor-client = "0.25.0"
solana-sdk = "1.10.29"
solana-program = "1.10.29"
solana-client = "1.10.29"

[dev-dependencies]
spl-memo = "3.0.1"
